src/objects/Dol_Batch_Monitor_Detail__c.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Details__c</fullName>
        <label>Error Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Batch__c</fullName>
        <label>Parent Batch</label>
        <referenceTo>Dol_Batch_Monitor__c</referenceTo>
        <relationshipLabel>Batch Monitor Details</relationshipLabel>
        <relationshipName>Batch_Monitor_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Drop_Location__c</fullName>
        <label>Target Drop Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Monitor Detail</label>
    <nameField>
        <displayFormat>Child-{0000}</displayFormat>
        <label>Batch Monitor Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Monitor Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>